[gd_scene load_steps=24 format=3 uid="uid://g805agceuw4a"]

[ext_resource type="Script" path="res://scenes/levels/ruang-tamu-01/notif-ibu/pesan_dari_ibu.gd" id="1_6nmst"]
[ext_resource type="Texture2D" uid="uid://dwlr0y0fpkmij" path="res://assets/1.3 - Menjawab pesan teks melalui handphone/Background Heanphone.svg" id="2_u62id"]
[ext_resource type="Texture2D" uid="uid://btub6u4goecav" path="res://assets/1.3 - Menjawab pesan teks melalui handphone/Hari ini 06.00.png" id="3_0p2ni"]
[ext_resource type="Texture2D" uid="uid://biid5qtwux8iv" path="res://assets/1.3 - Menjawab pesan teks melalui handphone/kontak1.png" id="5_06t4q"]
[ext_resource type="Texture2D" uid="uid://dfa00lh4kqfca" path="res://assets/1.3 - Menjawab pesan teks melalui handphone/kotak-message.png" id="5_dafej"]
[ext_resource type="FontFile" uid="uid://3ah1t7r2g1bv" path="res://assets/Klee_One/KleeOne-Regular.ttf" id="5_mitil"]
[ext_resource type="Texture2D" uid="uid://wnphw0olb6wq" path="res://assets/1.3 - Menjawab pesan teks melalui handphone/Chat/Chat1 Mama.png" id="6_lk251"]
[ext_resource type="Texture2D" uid="uid://ctawqmv3cheq2" path="res://assets/Simple Shapes/Square.png" id="6_r1dgt"]
[ext_resource type="Texture2D" uid="uid://fr0215fgujaj" path="res://assets/1.3 - Menjawab pesan teks melalui handphone/Chat/Chat2 Mama.png" id="7_o3w8m"]
[ext_resource type="Texture2D" uid="uid://mf47kb5a4hnd" path="res://assets/1.3 - Menjawab pesan teks melalui handphone/Chat/Chat3 Mama.png" id="8_6124d"]
[ext_resource type="Texture2D" uid="uid://bywficl0qakti" path="res://assets/1.3 - Menjawab pesan teks melalui handphone/Chat/Chat1 Andika.png" id="9_mcshf"]
[ext_resource type="Texture2D" uid="uid://pc3h6h165df5" path="res://assets/1.3 - Menjawab pesan teks melalui handphone/Chat/Chat4 Mama.png" id="10_0sfd0"]
[ext_resource type="Texture2D" uid="uid://c8ex0l2l4rqc2" path="res://assets/1.3 - Menjawab pesan teks melalui handphone/Chat/Chat5 Mama.png" id="11_45ylk"]
[ext_resource type="Texture2D" uid="uid://bllnym0wxscgb" path="res://assets/1.3 - Menjawab pesan teks melalui handphone/Chat/iyaa maa.png" id="12_shet5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbdga"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_color = Color(0, 0, 0, 0.678431)
shadow_size = 20

[sub_resource type="AtlasTexture" id="AtlasTexture_e1m6b"]
atlas = ExtResource("2_u62id")
region = Rect2(780, 14, 514, 1051)

[sub_resource type="Animation" id="Animation_05u1r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kss34"]
resource_name = "start"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_msfnr"]
_data = {
"RESET": SubResource("Animation_05u1r"),
"start": SubResource("Animation_kss34")
}

[sub_resource type="Animation" id="Animation_43qal"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HP:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(464.21, 800)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HP:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pesan/Chat1Mama:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-489.739, -174.564)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pesan/Chat1Mama:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pesan/Chat2Mama:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-478.609, -119.59)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pesan/Chat2Mama:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Pesan/Chat3Mama:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-478.609, -65.641)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Pesan/Chat3Mama:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Pesan/Chat1Andika:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(445.217, -13.1282)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Pesan/Chat1Andika:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Pesan/Chat4Mama:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-345.043, 31.1795)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Pesan/Chat4Mama:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Pesan/Chat5Mama:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-467.478, 78.7693)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Pesan/Chat5Mama:rotation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Pesan/IyaaMaa:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(389.565, 131.282)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Pesan/IyaaMaa:rotation")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Pesan:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(648, 392)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Pesan:rotation")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_x2sbl"]
resource_name = "selesai"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HP:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(464.21, 8), Vector2(464.21, 811.897)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HP:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pesan:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(648, 392), Vector2(648, 1195.9)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pesan:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_rg672"]
resource_name = "start"
length = 9.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HP:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(464.21, 800), Vector2(464.21, 8), Vector2(464.21, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HP:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [0.0, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pesan/Chat1Mama:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(-489.739, -174.564), Vector2(-33.3914, -174.564)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pesan/Chat1Mama:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pesan/Chat2Mama:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(-478.609, -119.59), Vector2(-44.5218, -119.59)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pesan/Chat2Mama:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Pesan/Chat3Mama:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(4, 5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(-478.609, -65.641), Vector2(-44.5218, -65.641)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Pesan/Chat3Mama:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Pesan/Chat1Andika:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(5, 6),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(445.217, -13.1282), Vector2(66.7826, -13.1282)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Pesan/Chat1Andika:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Pesan/Chat4Mama:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(6, 7),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(-345.043, 31.1795), Vector2(-178.087, 31.1795)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Pesan/Chat4Mama:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(6),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [0.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Pesan/Chat5Mama:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(7, 8),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(-467.478, 78.7693), Vector2(-55.6521, 78.7693)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Pesan/Chat5Mama:rotation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(7),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [0.0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Pesan/IyaaMaa:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(8, 9),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(389.565, 131.282), Vector2(128.006, 131.282)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Pesan/IyaaMaa:rotation")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(8),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [0.0]
}
tracks/16/type = "method"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath(".")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(8.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"selesai"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ywmrb"]
_data = {
"RESET": SubResource("Animation_43qal"),
"selesai": SubResource("Animation_x2sbl"),
"start": SubResource("Animation_rg672")
}

[node name="PesanDariIbu" type="Control"]
z_index = 12
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6nmst")
metadata/_edit_vertical_guides_ = [480.0, 832.21]

[node name="HP" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 464.21
offset_top = 800.0
offset_right = 832.21
offset_bottom = 1544.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qbdga")
metadata/_edit_group_ = true

[node name="BackHp" type="TextureRect" parent="HP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -372.0
offset_right = 184.0
offset_bottom = 372.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_e1m6b")
expand_mode = 1

[node name="HariIni06_00" type="Sprite2D" parent="HP"]
position = Vector2(183.75, 93.25)
scale = Vector2(0.712389, 0.796296)
texture = ExtResource("3_0p2ni")
region_enabled = true
region_rect = Rect2(984, 141, 113, 27)

[node name="Kontak1" type="Sprite2D" parent="HP"]
position = Vector2(184, 35.4074)
scale = Vector2(0.715953, 0.668063)
texture = ExtResource("5_06t4q")
region_enabled = true
region_rect = Rect2(780, 14, 514, 106)

[node name="Kotak-message" type="Sprite2D" parent="HP"]
position = Vector2(183.363, 708.396)
scale = Vector2(0.707131, 0.71398)
texture = ExtResource("5_dafej")
region_enabled = true
region_rect = Rect2(794, 990, 488, 58)

[node name="Pesan" type="Sprite2D" parent="."]
clip_children = 1
position = Vector2(648, 392)
scale = Vector2(0.71875, 1.21875)
texture = ExtResource("6_r1dgt")

[node name="Chat1Mama" type="Sprite2D" parent="Pesan"]
position = Vector2(-489.739, -174.564)
scale = Vector2(0.972318, 0.568428)
texture = ExtResource("6_lk251")
region_enabled = true
region_rect = Rect2(801, 198, 411, 83)

[node name="Chat2Mama" type="Sprite2D" parent="Pesan"]
position = Vector2(-478.609, -119.59)
scale = Vector2(0.92024, 0.537715)
texture = ExtResource("7_o3w8m")
region_enabled = true
region_rect = Rect2(801, 294, 411, 103)

[node name="Chat3Mama" type="Sprite2D" parent="Pesan"]
position = Vector2(-478.609, -65.641)
scale = Vector2(0.960662, 0.566545)
texture = ExtResource("8_6124d")
region_enabled = true
region_rect = Rect2(802, 409, 393, 84)

[node name="Chat1Andika" type="Sprite2D" parent="Pesan"]
position = Vector2(445.217, -13.1282)
scale = Vector2(0.934524, 0.55142)
texture = ExtResource("9_mcshf")
region_enabled = true
region_rect = Rect2(909, 516, 361, 93)

[node name="Chat4Mama" type="Sprite2D" parent="Pesan"]
position = Vector2(-345.043, 31.1795)
scale = Vector2(1.02261, 0.615385)
texture = ExtResource("10_0sfd0")
region_enabled = true
region_rect = Rect2(802, 624, 100, 48)

[node name="Chat5Mama" type="Sprite2D" parent="Pesan"]
position = Vector2(-467.478, 78.7693)
scale = Vector2(0.931191, 0.548448)
texture = ExtResource("11_45ylk")
region_enabled = true
region_rect = Rect2(802, 687, 383, 95)

[node name="IyaaMaa" type="Sprite2D" parent="Pesan"]
position = Vector2(389.565, 131.282)
scale = Vector2(0.609421, 0.328205)
texture = ExtResource("12_shet5")
region_enabled = true
region_rect = Rect2(869, 798, 346, 80)

[node name="TekanTombolApapun" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 846.76
offset_top = 344.75
offset_right = 1358.76
offset_bottom = 392.75
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("5_mitil")
theme_override_font_sizes/font_size = 32
text = "Tekan tombol apapun untuk lanjut"

[node name="AnimationTombolApapun" type="AnimationPlayer" parent="TekanTombolApapun"]
libraries = {
"": SubResource("AnimationLibrary_msfnr")
}

[node name="AnimationHP" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ywmrb")
}
